# nzt48-signals

./: .dockerignore  .env.example  .gitignore  00_PHASE_Q1_START_HERE.md  00_READ_THIS_FIRST.md  00_START_HERE_REBUILD_COMPLETE.txt  11_10_QUALITY_TEST_SUITE_INDEX.md  11_10_QUALITY_VALIDATION_REPORT.md  =20.0  ADAPTIVE_LEARNING_FILE_MANIFEST.txt  ADAPTIVE_LEARNING_INTEGRATION_GUIDE.md  ADVERSARIAL_REVIEW_PROMPTS_R10.md  ADVERSARIAL_REVIEW_PROMPTS_R11.md  ADVERSE_SELECTION_AUDIT.md  AEGIS_KRONOS_COMPARISON.md  AEGIS_KRONOS_UPGRADES_PLAN.md  AEGIS_MASTER_PLAN_v11.md  AEGIS_MASTER_PLAN_v13_FINAL.md  AEGIS_MASTER_PLAN_v15_MERGED.md  AEGIS_V2_BLUEPRINT_DELIVERY_SUMMARY.md  AEGIS_V2_BLUEPRINT_README.txt  AEGIS_V2_COMPLETE_DOCUMENTATION_INDEX.md  AEGIS_V2_COMPLETE_EXECUTION_BLUEPRINT.md  AEGIS_V2_COMPLETE_REBUILD_DELIVERY_SUMMARY.md  AEGIS_V2_COMPLETE_SYSTEM_ARCHITECTURE.md  AEGIS_V2_COMPLETE_UNIVERSE_EXPANSION.md  AEGIS_V2_COMPLETE_WIRING_SPECIFICATION.md  AEGIS_V2_EXECUTION_COMPLETE.md  AEGIS_V2_FINAL_SUMMARY_AND_INDEX.md  AEGIS_V2_HYBRID_IMMEDIATE_EXECUTION_PLAN.md  AEGIS_V2_IMPLEMENTATION_REFERENCE_GUIDE.md  AEGIS_V2_MASTER_PLAN_FINAL_INTEGRATED.md  AEGIS_V2_MASTER_PROMPT.md  AEGIS_V2_PHASES_1-25_INDEX.md  AEGIS_V2_PHASES_1-25_REBUILT_INSTITUTIONAL_PART1.md  AEGIS_V2_PHASES_1-25_REBUILT_INSTITUTIONAL_PART2.md  AEGIS_V2_PHASES_1-25_REBUILT_INSTITUTIONAL_PART3.md  AEGIS_V2_PHASES_1-25_REBUILT_INSTITUTIONAL_PART4.md  AEGIS_V2_PHASES_1-25_REBUILT_INSTITUTIONAL_PART5.md  AEGIS_V2_UNIFIED_MASTER_BLUEPRINT_2026.md  (+206 more)
.github/: GITHUB_SETUP.md
aegis/: 01_STOP_SHIP.md  02_STRATEGY.md  03_EXECUTION_TIMING.md  04_HARDENING.md  05_QUANTUM_APEX.md  06_EXECUTIONER.md  07_RISK.md  08_INFRASTRUCTURE.md  09_IMPLEMENTATION.md  10_APPENDIX.md  AEGIS_COMPLETE.md  README.md  sync.sh
analysis/: PHASE_3_SUMMARY.md  README.md  efficiency_audit.md  failure_modes_audit.md  indicator_audit.md  strategy_audit.md
api/: war_room_endpoints.py
artifacts/: drought.json
bots/: bot_base.py  earnings_specialist.py  kelly_sizer.py  portfolio_overseer.py  sector_meta_bot.py  specialist_bots.py  timeframe_stacking.py
command_center/: __init__.py  diff.py  server.py  state.py  tick_loop.py
config/: __init__.py  bounds.toml  bounds.toml.v5stub.bak  change_log.py  config.toml  contracts.toml  contracts.toml.bak-88  defaults.toml  defaults.toml.v5stub.bak  holdings.yaml  learned.toml  scanner_templates.json  secrets.py  settings.yaml  universe.yaml  universe_constants.py
core/: __init__.py  accruals_quality_veto.py  analyst_revision_tracker.py  artifact_loader.py  asyncio_heartbeat.py  capacity_monitor.py  chandelier_exit.py  clock.py  cloudwatch_metrics.py  confidence_scorer_v2.py  cost_drag_calculator.py  cross_asset_macro.py  cross_impact_ofi.py  data_feed_auditor.py  data_health_provider.py  data_retention.py  day_of_week_filter.py  db_writer.py  disruptor_engine.py  dqn_ghost_maker.py  drought_manager.py  drought_monitor.py  earnings_calendar.py  earnings_fade_gate.py  earnings_sentiment.py  entry_timing_model.py  evt.py  exhaustion_monitor.py  expiry_pinning.py  fracdiff.py  gap_analytics.py  ghost_stop_executor.py  hmm_regime.py  ib_gateway_health_monitor.py  indicator_enhancements.py  indicator_ranking_report.py  intraday_momentum.py  invariant_enforcer.py  (+71 more)
nzt48-aegis-v2/rust_core/: Cargo.toml  build.rs
nzt48-aegis-v2/rust_core/proptest-regressions/: proptest_risk.txt
nzt48-aegis-v2/rust_core/src/: asian_session.rs  broker.rs  broker_resilience.rs  broker_tests.rs  broker_tests_ext.rs  channel.rs  clock.rs  clock_tests.rs  config.rs  config_loader.rs  cross_asset_macro.rs  cross_timezone.rs  crucible.rs  currency.rs  dqn_signal_weighting.rs  engine.rs  engine_tests.rs  entry_engine.rs  european_session.rs  exchange_profile.rs  exit_engine.rs  exit_engine_tests.rs  ffi.rs  garch_evt.rs  garch_inference.rs  hardening.rs  hayashi_yoshida.rs  ibkr_broker.rs  isa_gate.rs  latency_profiler.rs  lib.rs  liquidation_defense.rs  live_readiness.rs  log_thompson_sampler.rs  main.rs  market_config.rs  market_scheduler.rs  multiframe_vol.rs  neural_hawkes.rs  order_book.rs  (+37 more)
nzt48-aegis-v2/rust_core/src/types/: enums.rs  execution.rs  mod.rs  structs.rs  wal.rs
nzt48-rust/: Cargo.toml  README.md
nzt48-rust/src/: chandelier.rs  indicators.rs  lib.rs  math.rs
rust_core/: Cargo.toml  Cargo.toml.v5stub.bak
rust_core/src/: broker_router.rs  clock.rs  clock.rs.v5stub.bak  config.rs  config.rs.v5stub.bak  exchange_profile.rs  exchange_profile.rs.v5stub.bak  ibkr_broker.rs  ibkr_broker.rs.v5stub.bak  main.rs  main.rs.v5stub.bak  metrics_export.rs  metrics_export.rs.v5stub.bak  types.rs  types.rs.v5stub.bak
rust_core/src/_scaffold/: bar_builder.rs  broker_sync.rs  corporate_actions.rs  event_store.rs  exit_engine.rs  health.rs  indicators.rs  nats_client.rs  order_book.rs  order_router.rs  replay.rs  risk_arbiter.rs
rust_core/src/_scaffold/quant_core/: garch.rs  garch_evt.rs  hayashi_yoshida.rs  kalman.rs  mod.rs  regime.rs
(+1538 files in other folders)
