[package]
name = "nzt48_rust_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "nzt48_rust_engine"
crate-type = ["cdylib"]  # Python FFI library

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Performance
rayon = "1.8"           # Parallel iterators
crossbeam = "0.8"       # Lock-free data structures
parking_lot = "0.12"    # Fast mutex/rwlock

# Data structures
ndarray = "0.15"        # N-dimensional arrays

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math
num-traits = "0.2"
statrs = "0.16"         # Statistical functions

# Time
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1  # Some optimization for faster dev builds
